#2 Change service to save properties, change controller to include date query param, add assertions to test